--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,12 @@ body {
   padding: 0 24px;
   margin: 0 auto;
 }
+
+.site-footer {
+  color: #777;
+  font-size: 73%;
+  text-align: center;
+  border-top: 1px dotted #CCC;
+  margin-top: 30px;
+  padding: 20px;
+}
